--- a/src/styles/components/_header.components.scss
+++ b/src/styles/components/_header.components.scss
@@ -6,19 +6,28 @@
     border-bottom: 3px solid $primary-black-border;
     width: 100%;
 
-    & > div {
-      display: flex;
-      justify-content: space-between;
-      width: 100%;
-      height: 90px;
-    }
+    display: flex;
+    justify-content: space-between;
+    height: 90px;
+
 
     &__logo {
-        max-width: 220px;
+        max-width: 180px;
+        padding: 0px 10px 0px 30px;
+
+        @include breakpoint($laptop) {
+          padding: 0px 20px;
+          max-width: 120px;
+        }
 
         @include breakpoint($tablet) {
           padding: 0px 20px;
           max-width: 50px;
         }
+
+        @include breakpoint($mobile-s) {
+          padding: 0px 10px;
+        }
+        
     }
 }
