--- a/src/styles/components/_navbar.components.scss
+++ b/src/styles/components/_navbar.components.scss
@@ -5,15 +5,19 @@
 
     a {
         font-family: 'League Spartan', sans-serif;
-        line-height: 18px;
+        line-height: 16px;
+    }
+
+    &-link {
+      font-size: 14px;
     }
 
     &__main {
-        padding: 0px 40px ;
+        padding: 0px 10px ;
         display: flex;
         justify-content: center;
         align-items: center;    
-        gap: 50px;
+        gap: 35px;
         
         @include breakpoint($tablet) {
             border-top: 3px solid $primary-black-border;
@@ -49,37 +53,48 @@
     }
 
     &__middle {
-      padding: 0px 20px;
+      padding: 0px 25px;
       display: flex;
       justify-content: center;
       align-items: center;    
-      gap: 30px;
 
+      @include breakpoint($mobile-s) {
+        padding: 0px 10px;
+      }
     }
 
     &__secondary {
         justify-content: center;
         align-items: center;
-        padding: 0px 50px;
+        padding: 0px 30px;
         display: flex;
-        gap: 50px;
+        gap: 35px;
         background-color: $primary-black-background-color;
 
-        @include breakpoint($tablet) {
-            background-color: #fff;
-            padding: 0px 20px;
-            gap: 30px;
-
-            img {
-                filter: invert(1);
-                height: 30px;
-            }
+        img {
+          height: 30px;
         }
 
         a {
             color: $primary-white-font-color;
             font-weight: 500;
             font-size: 16px;
+            display: flex;
+            align-items: center;
+        }
+
+        @include breakpoint($tablet) {
+          background-color: #fff;
+          padding: 0px 20px;
+          gap: 30px;
+
+          img {
+              filter: invert(1);
+          }
+        }
+
+        @include breakpoint($mobile-s) {
+          padding: 0px 10px;
         }
     }
 }
